# triangledesk-content-api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: error.rs  items.rs  main.rs  newsitem.rs  upload.rs
src/collections/: items.rs
src/content/: items.rs
